- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.15.8, 6.3.0 Beta3
 
- 
        185760fa44 (qt/qtdeclarative/dev) c49fbc7a86 (qt/qtdeclarative/6.2) c49fbc7a86 (qt/tqtc-qtdeclarative/6.2) 185760fa44 (qt/tqtc-qtdeclarative/dev) 03b2accad9 (qt/qtdeclarative/6.3) 03b2accad9 (qt/tqtc-qtdeclarative/6.3)
 
Using for .. of loop in JS when iterating over groups an item may have (DelegateModel.groups) seems to sooner or later trigger a crash. In the meanwhile using for .. in or more old fashioned for loop seems to work fine.
Steps to reproduce the problem:
- Run the attached project
 - check the checkbox (=> will use for .. of loop)
 - click repeatedly on "toggle selection" => crash
 
If the checkbox is not checked the example will use different style for loop and no crash will occur.
| For Gerrit Dashboard: QTBUG-101700 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 402073,4 | V4 ArrayIterator: Protect retrieved value from GC | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 402535,2 | V4 ArrayIterator: Protect retrieved value from GC | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 402536,2 | V4 ArrayIterator: Protect retrieved value from GC | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 402537,4 | V4 ArrayIterator: Protect retrieved value from GC | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |